--- a/QuizDjango/QuizSite/templates/index.html
+++ b/QuizDjango/QuizSite/templates/index.html
@@ -27,7 +27,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Quiz. Powodzenia!</p>
+            <p>&copy; 2024 Quiz. Powodzenia! Krzysztof Janczak</p>
         </div>
     </footer>
 
