--- a/QuizDjango/QuizSite/templates/question.html
+++ b/QuizDjango/QuizSite/templates/question.html
@@ -40,7 +40,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Quiz!</p>
+            <p>&copy; 2024 Quiz! Krzysztof Janczak</p>
         </div>
     </footer>
 
